chore: use new type system

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@fastify/accept-negotiator": "^2.0.0",
     "@fastify/send": "^3.2.0",
     "content-disposition": "^0.5.4",
-    "fastify-plugin": "^5.0.0",
+    "fastify-plugin": "github:DemonHa/fastify-plugin#type-safe-definition-plugin",
     "fastq": "^1.17.1",
     "glob": "^11.0.0"
   },
@@ -71,7 +71,7 @@
     "@types/node": "^22.0.0",
     "concat-stream": "^2.0.0",
     "eslint": "^9.17.0",
-    "fastify": "^5.1.0",
+    "fastify": "github:DemonHa/fastify#type-safe-plugin-definitions",
     "neostandard": "^0.12.0",
     "pino": "^9.1.0",
     "proxyquire": "^2.1.3",
